# PTC

./: README.md  meson.build
interface/: wrap_cinterface2ptc.cc  wrap_cinterface2ptc.hh
ptc_standalone_readiness/: README.md  requirements.txt
ptc_standalone_readiness/inputs/: PTC-PyORBIT_flat_file.madx.flt
ptc_standalone_readiness/scripts/: build_and_smoke_test.sh  run_clean_ptc_lattice_test.sh
ptc_standalone_readiness/tests/: functional_ptc_lattice.py  normalize_ptc_flat_file.py  smoke_load_ptc.py
